BACKUP-BEFORE-AUGUST2025/13-Ingress-ExternalDNS-Domain-Name-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-DomainName-Based-Routing-app1-2-3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1-app2-app3
  #annotations:
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: eapp1.awsbestbractices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: eapp2.awsbestbractices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
    - host: eapp3.awsbestbractices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt-webapp-clusterip-service
                port: 
                  number: 80
